--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -63,14 +63,14 @@
                             The perforated molds allow the idlis to be cooked evenly.
                             The tree holds the trays above the level of boiling water in a pot, and the pot is covered until the idlis are done (about 10–25 minutes, depending on size).
                             A more traditional method is to use leaves instead of moulds.
-                        </p>
-                    </div>
-                </div>
-            </div>
+                        </p><br><br><br><br>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class= "col-xs-12">
-                <div class="box">
-                    <div class="body">
+<!--            <div class= "col-xs-12">-->
+<!--                <div class="box">-->
+<!--                    <div class="body">-->
                         <h4 class= "text-center">Luchai Puri</h4>
                         <p>A traditional and authentic bengali deep fried puffed bread recipe made with plain flour.
                            The recipe is very similar to a traditional poori recipe but just that this recipe is made with maida and ghee.
@@ -87,14 +87,14 @@
                             When they are golden-brown in color, they are removed and either served hot or saved for later use (as with the snack food pani puri).
                             Rolled puris may be pricked with a fork before deep frying to make flat puris for chaat like bhel puri.
                             A punctured puri does not puff when cooked because the steam escapes as it cooks.
-                        </p>
-                    </div>
-                </div>
-            </div>
+                        </p><br><br><br><br>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class= "col-xs-12">
-                <div class="box">
-                    <div class="body">
+<!--            <div class= "col-xs-12">-->
+<!--                <div class="box">-->
+<!--                    <div class="body">-->
                         <h4 class= "text-center">Tuppa Dosa</h4>
                         <p>A tasty and flavoured dosa recipe made with the traditional dosa batter with a generous amount of ghee.
                             It is basically an extension to the traditional dosa with an extra topping of clarified butter to make it more flavoured and tasty.
