changes to width of the page

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -27,14 +27,14 @@
 
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
-                        <li class = "visible-xs">
-                            <a href="#"><span class = "text-center"></span><br>Idly</a>
+                        <li class = "visible-xs text-center">
+                            <a href="#Idly"><span class = "text-center"></span><br>Idly</a>
                         </li>
-                        <li class = "visible-xs">
-                            <a href="#"><span class= "text-center"></span><br>Luchai Puri</a>
+                        <li class = "visible-xs text-center">
+                            <a href="#Luchai Puri"><span class= "text-center"></span><br>Luchai Puri</a>
                         </li>
-                        <li class = "visible-xs">
-                            <a href="#"><span class="text-center"></span><br>Tuppa Dosa</a>
+                        <li class = "visible-xs text-center">
+                            <a href ="#Tuppa Dosa"><span class="text-center" ></span><br>Tuppa Dosa</a>
                         </li>
                     </ul><!-- #nav-list -->
                 </div><!-- .collapse .navbar-collapse -->
@@ -42,12 +42,13 @@
         </nav><!-- #header-nav -->
   </header>
 
-    <div class="container">
-        <h2>Our Menu</h2>
+    <div class="container-fluid">
+        <h2 class = "text-center">Our Menu</h2>
         <div class="row">
             <div class= "col-xs-12">
                 <div class="box">
                     <div class="body">
+					<section id = "Idly">
                         <h4 class= "text-center">Idly</h4>
                         <p>A popular south indian breakfast recipe made with ground urad dal and idli rava batter.
                             Served with the combination of chutney recipes and sambar recipes.
@@ -64,6 +65,7 @@
                             The tree holds the trays above the level of boiling water in a pot, and the pot is covered until the idlis are done (about 10–25 minutes, depending on size).
                             A more traditional method is to use leaves instead of moulds.
                         </p><br><br><br><br>
+					</section>
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -71,6 +73,7 @@
 <!--            <div class= "col-xs-12">-->
 <!--                <div class="box">-->
 <!--                    <div class="body">-->
+						<section id = "Luchai Puri">
                         <h4 class= "text-center">Luchai Puri</h4>
                         <p>A traditional and authentic bengali deep fried puffed bread recipe made with plain flour.
                            The recipe is very similar to a traditional poori recipe but just that this recipe is made with maida and ghee.
@@ -88,6 +91,7 @@
                             Rolled puris may be pricked with a fork before deep frying to make flat puris for chaat like bhel puri.
                             A punctured puri does not puff when cooked because the steam escapes as it cooks.
                         </p><br><br><br><br>
+						</section>
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -95,7 +99,8 @@
 <!--            <div class= "col-xs-12">-->
 <!--                <div class="box">-->
 <!--                    <div class="body">-->
-                        <h4 class= "text-center">Tuppa Dosa</h4>
+						<section id = "Tuppa Dosa">
+						<h4 class= "text-center">Tuppa Dosa</h4>
                         <p>A tasty and flavoured dosa recipe made with the traditional dosa batter with a generous amount of ghee.
                             It is basically an extension to the traditional dosa with an extra topping of clarified butter to make it more flavoured and tasty.
                             It is generally served with a range of chutney recipes but can also be served with choice of curries for morning breakfast and also for lunch and dinner.
@@ -114,6 +119,7 @@
                             A dosa is served hot, either folded in half or rolled like a wrap.
                             It is usually served with chutney and sambar. The mixture of black grams and rice can be replaced with highly refined wheat flour or semolina.
                         </p>
+						</section>
                     </div>
                 </div>
             </div>
